# SegmentAnything3D

./: .gitignore  build_particles.py  download-sam.py  download_sam.py  environment.yml  mesh_to_gaussians.py  mesh_to_particles.py  particle_builder.py  pyproject.toml  sam3d.py  scratch.ipynb  segment.py  segmenter.py  test.ipynb  test_background.ipynb  test_gaussians.ipynb  util.py
