[project]
name = "segmentanything3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "imageio>=2.36.0",
    "open3d>=0.18.0",
    "opencv-python>=4.10.0.84",
    "scikit-image>=0.24.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
    "tyro>=0.8.13",
    "setuptools>=69.0.0",
    "numpy>=1.26.4,<2.0", 
    "pymeshfix>=0.17.1,<0.18", "ipykernel>=6.30.0,<7",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.pypi-options]
no-build-isolation = ["pointops"]

[tool.pixi.pypi-dependencies]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
pointops = { path = "libs/pointops" }
psdframe = { path = "../../packages/psdframe", editable = true }
initializerdefs = { path = "../../packages/initializerdefs", editable = true }
psdstaticdataset = { path = "../../packages/psdstaticdataset", editable = true }

[tool.pixi.dependencies]
cuda-version = "12.6.*"
cuda = ">=12.6.3,<13"


[tool.pixi.tasks]
segment = "python segment.py"
